fix broken style in image

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,7 +27,8 @@ body {
 }
 
 .card {
-  img {
+  img:not(.avatar) {
+    width: 100%;
     height: auto;
   }
 
